tests/fixtures/positive/style/StringShouldBeRawString.kt
package style

fun example() {
    val text = "line1\nline2\nline3\nline4"
}
