tests/fixtures/negative/style/MultilineRawStringIndentation.kt
package style

fun example() {
    val text = """
        Hello
        World
        Foo
    """.trimIndent()
}
